// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dark design snapshot — Auth pages > ModernLoginPage renders with semantic token classes 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen flex items-center justify-center bg-background p-4"
  >
    <div
      class="w-full max-w-sm mx-auto space-y-6"
    >
      <div
        class="flex flex-col items-center gap-2 text-center"
      >
        <div
          class="w-10 h-10 bg-primary rounded-lg flex items-center justify-center"
        >
          <span
            class="text-primary-foreground font-black text-base tracking-tighter"
          >
            V
          </span>
        </div>
        <span
          class="text-lg font-black text-foreground tracking-[-0.05em]"
        >
          VALUEOS
        </span>
      </div>
      <div
        class="bg-card border border-border rounded-lg p-8 space-y-6"
      >
        <div
          class="space-y-1 text-center"
        >
          <h1
            class="text-xl font-bold text-foreground tracking-tight"
          >
            Welcome back
          </h1>
          <p
            class="text-sm text-muted-foreground"
          >
            Don't have an account?
             
            <a
              class="text-primary hover:text-primary/80 font-medium transition-colors"
              href="/signup"
            >
              Sign up
            </a>
          </p>
        </div>
        <div
          class="flex justify-end"
        >
          <label
            class="text-[11px] text-muted-foreground flex items-center gap-2"
          >
            Language
            <select
              aria-label="Language"
              class="bg-surface border border-border rounded px-2 py-1 text-foreground text-[11px]"
            >
              <option
                value="en"
              >
                English
              </option>
            </select>
          </label>
        </div>
        <form
          class="space-y-4"
        >
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-medium text-foreground"
              for="email"
            >
              Email
            </label>
            <input
              autocapitalize="none"
              autocomplete="email"
              autocorrect="off"
              class="flex h-9 w-full rounded-md border border-border bg-surface px-3 py-1 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-primary/50 focus-visible:border-primary/50 disabled:cursor-not-allowed disabled:opacity-50 transition-colors"
              id="email"
              placeholder="name@example.com"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-medium text-foreground"
              for="password"
            >
              Password
            </label>
            <div
              class="relative"
            >
              <input
                autocomplete="current-password"
                class="flex h-9 w-full rounded-md border border-border bg-surface px-3 py-1 pr-10 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-primary/50 focus-visible:border-primary/50 disabled:cursor-not-allowed disabled:opacity-50 transition-colors"
                id="password"
                placeholder="••••••••"
                required=""
                type="password"
                value=""
              />
              <button
                aria-label="Show password"
                class="absolute right-3 top-1/2 -translate-y-1/2 text-muted-foreground hover:text-foreground transition-colors focus-visible:outline-none"
                type="button"
              >
                <svg
                  class="lucide lucide-eye size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center w-full h-9 rounded-md bg-primary text-primary-foreground text-sm font-semibold hover:bg-primary/90 active:scale-[0.98] transition-all disabled:pointer-events-none disabled:opacity-50"
            type="submit"
          >
            Sign in
          </button>
        </form>
        <div
          class="relative"
        >
          <div
            class="absolute inset-0 flex items-center"
          >
            <span
              class="w-full border-t border-border"
            />
          </div>
          <div
            class="relative flex justify-center text-[10px] uppercase tracking-widest"
          >
            <span
              class="bg-card px-2 text-muted-foreground font-medium"
            >
              Or continue with
            </span>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center w-full h-9 gap-2 rounded-md border border-border bg-white/5 text-foreground text-sm font-medium hover:bg-white/8 transition-colors disabled:pointer-events-none disabled:opacity-50"
          type="button"
        >
          <svg
            class="size-4"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
              fill="#4285F4"
            />
            <path
              d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
              fill="#34A853"
            />
            <path
              d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
              fill="#FBBC05"
            />
            <path
              d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
              fill="#EA4335"
            />
          </svg>
          Google
        </button>
      </div>
      <p
        class="text-center text-xs text-muted-foreground leading-relaxed"
      >
        By clicking continue, you agree to our
         
        <a
          class="underline underline-offset-4 hover:text-foreground transition-colors"
          href="/terms"
        >
          Terms of Service
        </a>
         
        and
         
        <a
          class="underline underline-offset-4 hover:text-foreground transition-colors"
          href="/privacy"
        >
          Privacy Policy
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`Dark design snapshot — Auth pages > ModernSignupPage renders with semantic token classes 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen flex items-center justify-center bg-background p-4"
  >
    <div
      class="w-full max-w-sm mx-auto space-y-6"
    >
      <div
        class="flex flex-col items-center gap-2 text-center"
      >
        <div
          class="w-10 h-10 bg-primary rounded-lg flex items-center justify-center"
        >
          <span
            class="text-primary-foreground font-black text-base tracking-tighter"
          >
            V
          </span>
        </div>
        <span
          class="text-lg font-black text-foreground tracking-[-0.05em]"
        >
          VALUEOS
        </span>
      </div>
      <div
        class="bg-card border border-border rounded-lg p-8 space-y-6"
      >
        <div
          class="space-y-1 text-center"
        >
          <h1
            class="text-xl font-bold text-foreground tracking-tight"
          >
            Create your account
          </h1>
          <p
            class="text-sm text-muted-foreground"
          >
            Already have an account?
             
            <a
              class="text-primary hover:text-primary/80 font-medium transition-colors"
              href="/login"
            >
              Sign in
            </a>
          </p>
        </div>
        <form
          class="space-y-4"
        >
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-medium text-foreground"
              for="fullName"
            >
              Full Name
            </label>
            <input
              autocapitalize="words"
              autocomplete="name"
              class="flex h-9 w-full rounded-md border border-border bg-surface px-3 py-1 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-primary/50 focus-visible:border-primary/50 disabled:cursor-not-allowed disabled:opacity-50 transition-colors"
              id="fullName"
              placeholder="John Doe"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-medium text-foreground"
              for="email"
            >
              Email
            </label>
            <input
              autocapitalize="none"
              autocomplete="email"
              autocorrect="off"
              class="flex h-9 w-full rounded-md border border-border bg-surface px-3 py-1 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-primary/50 focus-visible:border-primary/50 disabled:cursor-not-allowed disabled:opacity-50 transition-colors"
              id="email"
              placeholder="name@example.com"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-medium text-foreground"
              for="password"
            >
              Password
            </label>
            <div
              class="relative"
            >
              <input
                autocomplete="new-password"
                class="flex h-9 w-full rounded-md border border-border bg-surface px-3 py-1 pr-10 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-primary/50 focus-visible:border-primary/50 disabled:cursor-not-allowed disabled:opacity-50 transition-colors"
                id="password"
                minlength="8"
                placeholder="••••••••"
                required=""
                type="password"
                value=""
              />
              <button
                aria-label="Show password"
                class="absolute right-3 top-1/2 -translate-y-1/2 text-muted-foreground hover:text-foreground transition-colors focus-visible:outline-none"
                type="button"
              >
                <svg
                  class="lucide lucide-eye size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
              </button>
            </div>
            <p
              class="text-[10px] text-muted-foreground"
            >
              Must be at least 8 characters
            </p>
          </div>
          <button
            class="inline-flex items-center justify-center w-full h-9 rounded-md bg-primary text-primary-foreground text-sm font-semibold hover:bg-primary/90 active:scale-[0.98] transition-all disabled:pointer-events-none disabled:opacity-50"
            type="submit"
          >
            Create account
          </button>
        </form>
        <div
          class="relative"
        >
          <div
            class="absolute inset-0 flex items-center"
          >
            <span
              class="w-full border-t border-border"
            />
          </div>
          <div
            class="relative flex justify-center text-[10px] uppercase tracking-widest"
          >
            <span
              class="bg-card px-2 text-muted-foreground font-medium"
            >
              Or continue with
            </span>
          </div>
        </div>
        <button
          class="inline-flex items-center justify-center w-full h-9 gap-2 rounded-md border border-border bg-white/5 text-foreground text-sm font-medium hover:bg-white/8 transition-colors disabled:pointer-events-none disabled:opacity-50"
          type="button"
        >
          <svg
            class="size-4"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
              fill="#4285F4"
            />
            <path
              d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
              fill="#34A853"
            />
            <path
              d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
              fill="#FBBC05"
            />
            <path
              d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
              fill="#EA4335"
            />
          </svg>
          Google
        </button>
      </div>
      <p
        class="text-center text-xs text-muted-foreground leading-relaxed"
      >
        By clicking continue, you agree to our
         
        <a
          class="underline underline-offset-4 hover:text-foreground transition-colors"
          href="/terms"
        >
          Terms of Service
        </a>
         
        and
         
        <a
          class="underline underline-offset-4 hover:text-foreground transition-colors"
          href="/privacy"
        >
          Privacy Policy
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`Dark design snapshot — Auth pages > ResetPasswordPage renders with semantic token classes 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen flex items-center justify-center bg-background p-4"
  >
    <div
      class="w-full max-w-sm mx-auto space-y-6"
    >
      <div
        class="flex flex-col items-center gap-2 text-center"
      >
        <div
          class="w-10 h-10 bg-primary rounded-lg flex items-center justify-center"
        >
          <span
            class="text-primary-foreground font-black text-base tracking-tighter"
          >
            V
          </span>
        </div>
        <span
          class="text-lg font-black text-foreground tracking-[-0.05em]"
        >
          VALUEOS
        </span>
      </div>
      <div
        class="bg-card border border-border rounded-lg p-8 space-y-6"
      >
        <div
          class="space-y-1 text-center"
        >
          <h1
            class="text-xl font-bold text-foreground tracking-tight"
          >
            Reset password
          </h1>
          <p
            class="text-sm text-muted-foreground"
          >
            Enter your email to receive a reset link
          </p>
        </div>
        <form
          class="space-y-4"
        >
          <div
            class="space-y-1.5"
          >
            <label
              class="text-xs font-medium text-foreground"
              for="email"
            >
              Email address
            </label>
            <div
              class="relative"
            >
              <svg
                class="lucide lucide-mail absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-muted-foreground"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="16"
                  rx="2"
                  width="20"
                  x="2"
                  y="4"
                />
                <path
                  d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
                />
              </svg>
              <input
                class="flex h-9 w-full rounded-md border border-border bg-surface pl-9 pr-3 py-1 text-sm text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-primary/50 focus-visible:border-primary/50 disabled:cursor-not-allowed disabled:opacity-50 transition-colors"
                id="email"
                placeholder="you@example.com"
                required=""
                type="email"
                value=""
              />
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center w-full h-9 rounded-md bg-primary text-primary-foreground text-sm font-semibold hover:bg-primary/90 active:scale-[0.98] transition-all disabled:pointer-events-none disabled:opacity-50"
            type="submit"
          >
            Send reset link
          </button>
          <div
            class="text-center"
          >
            <a
              class="text-sm text-primary hover:text-primary/80 font-medium transition-colors"
              href="/login"
            >
              ← Back to login
            </a>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dark design snapshot — DashboardPage > renders KPI grid with semantic token classes 1`] = `
<div
  class="dark"
>
  <div
    class="p-6 space-y-6 min-h-full bg-background"
  >
    <div>
      <h1
        class="text-2xl font-bold text-foreground tracking-tight"
      >
        Dashboard
      </h1>
      <p
        class="text-sm text-muted-foreground mt-1"
      >
        Your workspace overview
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-4"
    >
      <div
        class="bg-card border border-border rounded-lg p-6 flex flex-col gap-3"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <p
            class="text-sm text-muted-foreground"
          >
            Total revenue
          </p>
          <span
            class="inline-flex items-center gap-1 text-xs font-medium text-primary"
          >
            <svg
              class="lucide lucide-trending-up w-3.5 h-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 7 13.5 15.5 8.5 10.5 2 17"
              />
              <polyline
                points="16 7 22 7 22 13"
              />
            </svg>
            +12.5%
          </span>
        </div>
        <p
          class="text-3xl font-bold text-foreground tracking-tight"
        >
          $1,250.00
        </p>
        <div>
          <p
            class="text-xs font-medium text-muted-foreground"
          >
            Trending up this month
          </p>
          <p
            class="text-xs text-muted-foreground/70 mt-0.5"
          >
            Visitors for the last 6 months
          </p>
        </div>
      </div>
      <div
        class="bg-card border border-border rounded-lg p-6 flex flex-col gap-3"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <p
            class="text-sm text-muted-foreground"
          >
            New Customers
          </p>
          <span
            class="inline-flex items-center gap-1 text-xs font-medium text-destructive"
          >
            <svg
              class="lucide lucide-trending-down w-3.5 h-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 17 13.5 8.5 8.5 13.5 2 7"
              />
              <polyline
                points="16 17 22 17 22 11"
              />
            </svg>
            -20%
          </span>
        </div>
        <p
          class="text-3xl font-bold text-foreground tracking-tight"
        >
          1,234
        </p>
        <div>
          <p
            class="text-xs font-medium text-muted-foreground"
          >
            Down 20% this period
          </p>
          <p
            class="text-xs text-muted-foreground/70 mt-0.5"
          >
            Acquisition needs attention
          </p>
        </div>
      </div>
      <div
        class="bg-card border border-border rounded-lg p-6 flex flex-col gap-3"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <p
            class="text-sm text-muted-foreground"
          >
            Active Accounts
          </p>
          <span
            class="inline-flex items-center gap-1 text-xs font-medium text-primary"
          >
            <svg
              class="lucide lucide-trending-up w-3.5 h-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 7 13.5 15.5 8.5 10.5 2 17"
              />
              <polyline
                points="16 7 22 7 22 13"
              />
            </svg>
            +12.5%
          </span>
        </div>
        <p
          class="text-3xl font-bold text-foreground tracking-tight"
        >
          45,678
        </p>
        <div>
          <p
            class="text-xs font-medium text-muted-foreground"
          >
            Strong user retention
          </p>
          <p
            class="text-xs text-muted-foreground/70 mt-0.5"
          >
            Engagement exceed targets
          </p>
        </div>
      </div>
      <div
        class="bg-card border border-border rounded-lg p-6 flex flex-col gap-3"
      >
        <div
          class="flex items-start justify-between gap-2"
        >
          <p
            class="text-sm text-muted-foreground"
          >
            Growth Rate
          </p>
          <span
            class="inline-flex items-center gap-1 text-xs font-medium text-primary"
          >
            <svg
              class="lucide lucide-trending-up w-3.5 h-3.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 7 13.5 15.5 8.5 10.5 2 17"
              />
              <polyline
                points="16 7 22 7 22 13"
              />
            </svg>
            +4.5%
          </span>
        </div>
        <p
          class="text-3xl font-bold text-foreground tracking-tight"
        >
          4.5%
        </p>
        <div>
          <p
            class="text-xs font-medium text-muted-foreground"
          >
            Steady performance increase
          </p>
          <p
            class="text-xs text-muted-foreground/70 mt-0.5"
          >
            Meets growth projections
          </p>
        </div>
      </div>
    </div>
    <div
      class="bg-card border border-border rounded-lg"
    >
      <div
        class="flex items-start justify-between gap-4 p-6 pb-4"
      >
        <div>
          <h2
            class="text-base font-semibold text-foreground"
          >
            Total visitors
          </h2>
          <p
            class="text-sm text-muted-foreground mt-0.5"
          >
            Total for the last 3 months
          </p>
        </div>
        <div
          class="flex items-center gap-1 flex-shrink-0"
        >
          <button
            class="px-3 py-1.5 rounded-md text-xs font-medium transition-colors bg-white/8 text-foreground border border-border"
            type="button"
          >
            Last 3 months
          </button>
          <button
            class="px-3 py-1.5 rounded-md text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-white/5"
            type="button"
          >
            Last 30 days
          </button>
          <button
            class="px-3 py-1.5 rounded-md text-xs font-medium transition-colors text-muted-foreground hover:text-foreground hover:bg-white/5"
            type="button"
          >
            Last 7 days
          </button>
        </div>
      </div>
      <div
        class="px-6 pb-6"
      >
        <div
          class="h-48 rounded-md bg-surface border border-border flex items-end justify-around px-4 pb-4 gap-1"
        >
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 20%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 35%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 28%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 55%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 42%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 38%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 65%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 48%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 72%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 58%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 80%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 62%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 90%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 70%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 85%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 95%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 75%;"
          />
          <div
            class="flex-1 rounded-sm bg-primary/30 hover:bg-primary/50 transition-colors"
            style="height: 88%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
